[gd_scene load_steps=20 format=3 uid="uid://drh3kj7778ibt"]

[ext_resource type="PackedScene" uid="uid://b30dvd4ye2sv3" path="res://RayPickerCamera/ray_picker_camera.tscn" id="1_33bfw"]
[ext_resource type="PackedScene" uid="uid://b4ykk1i4fn341" path="res://DifficultyManager/difficulty_manager.tscn" id="1_gac54"]
[ext_resource type="MeshLibrary" uid="uid://cesoulgt1yff5" path="res://MeshLibraries/SpaceLibrary.tres" id="1_j15wq"]
[ext_resource type="PackedScene" uid="uid://butwu35p7bjro" path="res://Enemy/enemy.tscn" id="2_wgbja"]
[ext_resource type="Script" path="res://TurretManager.gd" id="3_4nxnr"]
[ext_resource type="PackedScene" uid="uid://bfb4k2ep1dvtl" path="res://Base/base.tscn" id="3_jojtq"]
[ext_resource type="PackedScene" uid="uid://dlmltvgusbij4" path="res://Turret/turret.tscn" id="4_enpy5"]
[ext_resource type="Script" path="res://EnemyPath.gd" id="5_885ug"]
[ext_resource type="Script" path="res://Bank.gd" id="8_d6424"]
[ext_resource type="FontFile" uid="uid://cmi0owcroepcb" path="res://Assets/fonts/Asap/static/Asap-Bold.ttf" id="9_6ckwm"]
[ext_resource type="PackedScene" uid="uid://di3hexqm4y8x4" path="res://UI/victory_layer.tscn" id="10_i4sm6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_mwvmm"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_apbtm"]
sky_material = SubResource("ProceduralSkyMaterial_mwvmm")

[sub_resource type="Environment" id="Environment_ad6ns"]
background_mode = 2
sky = SubResource("Sky_apbtm")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jvajy"]
albedo_color = Color(0.560784, 0.6, 0.301961, 1)

[sub_resource type="Curve3D" id="Curve3D_yvn7s"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -14, 0, 16.5, -1, 0, 1, 1, 0, -1, -14, 0, 2, -1, 0, -1, 1, 0, 1, -6, 0, 2, -1, 0, -1, 1, 0, 1, -6, 0, 6, -1, 0, 1, 1, 0, -1, 2, 0, 6, -1, 0, 1, 1, 0, -1, 2, 0, -2, -1, 0, -1, 1, 0, 1, 14, 0, -2, -1, 0, -1, 1, 0, 1, 14, 0, 6, 0, 0, 0, 0, 0, 0, 18, 0, 6),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 9

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fsm4n"]
albedo_color = Color(0.360784, 0.360784, 0.360784, 1)

[sub_resource type="Theme" id="Theme_qv5h7"]
default_font = ExtResource("9_6ckwm")

[sub_resource type="LabelSettings" id="LabelSettings_s13n6"]
font_size = 64
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="BaseLevel" type="Node3D"]

[node name="DifficultyManager" parent="." instance=ExtResource("1_gac54")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ad6ns")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
size = Vector3(100, 2, 100)
material = SubResource("StandardMaterial3D_jvajy")

[node name="RayPickerCamera" parent="." node_paths=PackedStringArray("grid_map", "turret_manager") instance=ExtResource("1_33bfw")]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 18, 12)
grid_map = NodePath("../GridMap")
turret_manager = NodePath("../TurretManager")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_j15wq")
cell_size = Vector3(4, 4, 4)
cell_center_y = false
data = {
"cells": PackedInt32Array(65531, 65534, 1441794, 65531, 65535, 0, 65531, 0, 3, 65531, 1, 1048579, 65531, 2, 0, 65532, 65534, 0, 65533, 65534, 0, 65533, 2, 0, 65534, 65534, 0, 65534, 2, 655362, 65535, 65534, 0, 65535, 2, 0, 0, 65534, 0, 0, 2, 3, 1, 65534, 0, 1, 2, 0, 2, 65534, 0, 2, 2, 0, 3, 65534, 655363, 3, 2, 1048579, 4, 65534, 655362, 4, 65535, 0, 4, 0, 1441795, 4, 2, 3, 2, 1, 1048578, 2, 0, 655363, 1, 0, 0, 1, 1, 1441795, 65535, 0, 0, 65535, 65535, 1441795, 65534, 65535, 0, 65533, 65535, 1441794, 65532, 65535, 3, 65533, 1, 0, 65533, 3, 1441794, 65534, 3, 1441794, 65535, 3, 655362, 0, 3, 2, 1, 3, 1441794, 2, 3, 655362, 3, 3, 655362, 4, 3, 1048578, 5, 3, 2, 5, 2, 1441794, 5, 1, 655362, 6, 0, 655362, 5, 0, 655362, 5, 65535, 3, 5, 65534, 2, 5, 65533, 1441794, 4, 65533, 1441794, 3, 65533, 655362, 2, 65533, 1048578, 1, 65533, 1441795, 0, 65533, 655363, 65535, 65533, 1441794, 65534, 65533, 1048579, 65533, 65533, 3, 65532, 65533, 2, 65531, 65533, 2, 65530, 65533, 1441794, 65530, 65534, 655362, 65530, 65535, 1048579, 65530, 0, 1048578, 65530, 1, 2, 65530, 2, 655362, 65530, 3, 655362, 65531, 3, 1048578, 65529, 0, 1048578, 65529, 65535, 1441794, 65529, 65534, 1441794, 65529, 65533, 655362, 65529, 65532, 1048578, 65530, 65532, 2, 65531, 65532, 1441794, 65532, 65532, 1441794, 65533, 65532, 655362, 65534, 65532, 1048578, 65535, 65532, 2, 0, 65532, 2, 1, 65532, 1441794, 2, 65532, 655362, 3, 65532, 1048578, 4, 65532, 1048578, 5, 65532, 2, 6, 65532, 1441794, 6, 65533, 1441794, 6, 65534, 1441794, 6, 65535, 655362, 65528, 65532, 1048578, 65528, 65533, 1048578, 65528, 65534, 2, 7, 65532, 1441794, 7, 65533, 655362, 7, 65534, 655362, 65530, 65531, 1048578, 65531, 65531, 2, 65532, 65531, 1441794, 65533, 65531, 1441794, 65534, 65531, 655362, 65535, 65531, 1048578, 0, 65531, 2, 1, 65531, 2, 2, 65531, 1441794, 3, 65531, 655362, 4, 65531, 1048578, 5, 65531, 1048578)
}

[node name="TurretManager" type="Node3D" parent="."]
script = ExtResource("3_4nxnr")
turret_scene = ExtResource("4_enpy5")

[node name="EnemyPath" type="Path3D" parent="." node_paths=PackedStringArray("difficulty_manager")]
unique_name_in_owner = true
curve = SubResource("Curve3D_yvn7s")
script = ExtResource("5_885ug")
enemy_scene = ExtResource("2_wgbja")
difficulty_manager = NodePath("../DifficultyManager")

[node name="Road" type="CSGPolygon3D" parent="EnemyPath"]
polygon = PackedVector2Array(-1, 0, -1, 0.1, 1, 0.1, 1, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_fsm4n")

[node name="LeftEdge" type="CSGPolygon3D" parent="EnemyPath"]
polygon = PackedVector2Array(-1.1, 0, -1.1, 0.15, -0.9, 0.15, -0.9, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="RightEdge" type="CSGPolygon3D" parent="EnemyPath"]
polygon = PackedVector2Array(0.9, 0, 0.9, 0.15, 1.1, 0.15, 1.1, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="EnemySpawnTimer" type="Timer" parent="EnemyPath"]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="Base" parent="." instance=ExtResource("3_jojtq")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 18, 0, 6)

[node name="Bank" type="MarginContainer" parent="." groups=["bank"]]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
mouse_filter = 2
theme = SubResource("Theme_qv5h7")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("8_d6424")

[node name="GoldCounter" type="Label" parent="Bank"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Sample Text"
label_settings = SubResource("LabelSettings_s13n6")

[node name="VictoryLayer" parent="." instance=ExtResource("10_i4sm6")]
unique_name_in_owner = true
visible = false

[connection signal="timeout" from="EnemyPath/EnemySpawnTimer" to="EnemyPath" method="_on_enemy_spawn_timer_timeout"]
